logoutput/config/greeter-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: greeter-dep-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v1
  template:
    metadata:
      labels:
        app: greeter
        version: v1
    spec:
      containers:
        - name: greeter
          image: GREETER/IMAGE
          imagePullPolicy: Always
---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: greeter-dep-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
        - name: greeter
          image: GREETER/IMAGE
          imagePullPolicy: Always
