logoutput/config/greeter-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: greeter-svc-v1
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v1
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: greeter-svc-v2
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v2
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
