logoutput/config/greeter-app/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: exercises
  name: greeter-route
spec:
  parentRefs:
  - name: logoutput-gateway
  rules:
  - matches:
    - path:
        type: Exact
        value: /greeter
    backendRefs:
    - name: greeter-svc-v1
      port: 80
      weight: 75
    - name: greeter-svc-v2
      port: 80
      weight: 25
